[GHO-4] fix RTL+logo size on IE11

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
@@ -18,7 +18,23 @@
 }
 
 .cd-site-header__inner {
+  // IE11 can't do RTL grid
+  [dir='rtl'] & {
+    .cd-site-logo {
+      float: right;
+    }
+    .cd-site-header__actions {
+      float: left;
+    }
+  }
+
   @supports(display: grid) {
+    // unset RTL styles for IE11
+    .cd-site-logo,
+    .cd-site-header__actions {
+      float: none;
+    }
+
     grid-template-columns: 52px 1fr;
 
     @include tablet {
